# py-key-value-store

./: .gitignore  Dockerfile  Makefile  README.md  build.sh  helm.py  pyproject.toml
helm/: Chart.yaml  values.yaml
helm/templates/: deployment.goyaml  deployment.yaml  ingress.goyaml  service.goyaml
py_key_value_store/: __main__.py  database.py
test/: test.sh
