[tool.poetry]
name = "py-key-value-store"
version = "0.1.11"
description = ""
authors = ["RincewindWizzard <git@magierdinge.de>"]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.2"
gunicorn = "^20.1.0"
toml = "^0.10.2"
pyyaml = "^6.0"
loguru = "^0.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
py-key-value-store = 'flask --app py_key_value_store.__main__ run'
helm = 'helm:main'

[docker]
repository = 'rincewindwizzard/key-value-store'

[kubernetes]
replicas = 1
